tdf#165995 pptx export: table cell margins weren't exported

Although some left/right margins have been exported since
5.0 commit 636c5a63d67b52b0d2f9f21a863c45eca6ac9ff7
Author: yogesh.bharate001 on Thu Mar 26 10:48:15 2015 +0530
    tdf#90223:PPTX table cell left  and right margin is not exported.

zero left/right margins weren't exported,
and nothing was done for top/bottom border padding from table cells.
(That's a bit weird, because I am using Yogesh's unit test to
 test for a round-tripped zero bottom border.
 It was the only existing unit test with non-default border spacing.)

[The default (if not specified during import) L/R margins are 0.25cm
 (so definitely a zero margin needs to be exported and not ignored),
 and the import default for T/B margins is 0.127cm.
 However, none of that is documented of course.]

make CppunitTest_sd_export_tests-ooxml1 \
    CPPUNIT_TEST_NAME=testCellLeftAndRightMargin

Change-Id: I12a8a785ddb784cacd4abf10e8e19df7cd50ec64
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/183564
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>